apps/web-admin/envs/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-admin
  namespace: cinema
spec:
  template:
    spec:
      containers:
        - name: web-admin
