apps/web-admin/envs/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - admin.staging.cine.io.vn
      secretName: admin-staging-cine-io-vn-tls
  rules:
    - host: admin.staging.cine.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-admin
                port:
                  name: http
